--- a/icon.css
+++ b/icon.css
@@ -1,7 +1,7 @@
  /*
- * # Semantic UI
+ * # Semantic UI - 1.9.0
  * https://github.com/Semantic-Org/Semantic-UI
- * http://beta.semantic-ui.com/
+ * http://www.semantic-ui.com/
  *
  * Copyright 2014 Contributors
  * Released under the MIT license
@@ -18,7 +18,7 @@
 @font-face {
   font-family: 'Icons';
   src: url("assets/fonts/icons.eot");
-  src: url("assets/fonts/icons.eot?#iefix") format('embedded-opentype'), url("assets/fonts/icons.svg#icons") format('svg'), url("assets/fonts/icons.woff") format('woff'), url("assets/fonts/icons.ttf") format('truetype');
+  src: url("assets/fonts/icons.eot?#iefix") format('embedded-opentype'), url("assets/fonts/icons.woff2") format('woff'), url("assets/fonts/icons.woff") format('woff'), url("assets/fonts/icons.ttf") format('truetype'), url("assets/fonts/icons.svg#icons") format('svg');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -27,7 +27,7 @@
 }
 i.icon {
   display: inline-block;
-  opacity: 0.75;
+  opacity: 1;
   margin: 0em 0.25rem 0em 0em;
   width: 1.23em;
   height: 0.9em;
@@ -97,8 +97,9 @@ i.icon.active {
 i.emphasized.icon {
   opacity: 1;
 }
-i.icon.disabled {
-  opacity: 0.3;
+i.disabled.icon {
+  pointer-events: none;
+  opacity: 0.3 !important;
 }
 
 
@@ -113,7 +114,7 @@ i.icon.disabled {
 
 i.link.icon {
   cursor: pointer;
-  opacity: 0.75;
+  opacity: 0.8;
   -webkit-transition: opacity 0.2s ease;
           transition: opacity 0.2s ease;
 }
@@ -127,7 +128,7 @@ i.link.icon:hover {
 
 i.circular.icon {
   border-radius: 500em !important;
-  padding: 0.5em 0.35em !important;
+  padding: 0.5em 0.5em !important;
   box-shadow: 0em 0em 0em 0.1em rgba(0, 0, 0, 0.1) inset;
   line-height: 1 !important;
   width: 2em !important;
@@ -338,7 +339,7 @@ i.massive.icon {
 }
 /*
  * # Semantic - Icon
- * http://github.com/jlukic/semantic-ui/
+ * http://github.com/semantic-org/semantic-ui/
  *
  *
  * Copyright 2014 Contributor
@@ -347,18 +348,9 @@ i.massive.icon {
  *
  */
 /*
- *  Font Awesome 4.0.3
- *  the iconic font designed for Bootstrap
- *  ------------------------------------------------------------------------------
- *  The full suite of pictographic icons, examples, and documentation can be
- *  found at http://fon.io.  Stay up to date on Twitter at
- *  http://twitter.com/fon.
- *
- *  License
- *  ------------------------------------------------------------------------------
- *  - The Font Awesome font is licensed under SIL OFL 1.1 -
- *    http://scripts.sil.org/OFL
-
+ * Font Awesome 4.3.0 by @davegandy - http://fontawesome.io - @fontawesome
+ * License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
 
 
 /*******************************
@@ -398,10 +390,10 @@ i.icon.search:before {
 i.icon.mail.outline:before {
   content: "\f003";
 }
-i.icon.external.link:before {
+i.icon.external:before {
   content: "\f08e";
 }
-i.icon.wifi:before {
+i.icon.signal:before {
   content: "\f012";
 }
 i.icon.setting:before {
@@ -491,7 +483,7 @@ i.icon.calendar.outline:before {
 i.icon.ticket:before {
   content: "\f145";
 }
-i.icon.external.link.square:before {
+i.icon.external.square:before {
   content: "\f14c";
 }
 i.icon.map:before {
@@ -514,6 +506,36 @@ i.icon.comment.outline:before {
 }
 i.icon.comments.outline:before {
   content: "\f0e6";
+}
+i.icon.text.telephone:before {
+  content: "\f1e4";
+}
+i.icon.find:before {
+  content: "\f1e5";
+}
+i.icon.wifi:before {
+  content: "\f1eb";
+}
+i.icon.alarm.slash:before {
+  content: "\f1f6";
+}
+i.icon.alarm.slash.outline:before {
+  content: "\f1f7";
+}
+i.icon.copyright:before {
+  content: "\f1f9";
+}
+i.icon.at:before {
+  content: "\f1fa";
+}
+i.icon.eyedropper:before {
+  content: "\f1fb";
+}
+i.icon.paint.brush:before {
+  content: "\f1fc";
+}
+i.icon.heartbeat:before {
+  content: "\f21e";
 }
 
 /* User Actions */
@@ -664,6 +686,18 @@ i.icon.write.square:before {
 i.icon.share.square:before {
   content: "\f14d";
 }
+i.icon.add.to.cart:before {
+  content: "\f217";
+}
+i.icon.in.cart:before {
+  content: "\f218";
+}
+i.icon.add.user:before {
+  content: "\f234";
+}
+i.icon.remove.user:before {
+  content: "\f235";
+}
 
 /* Messages */
 i.icon.help.circle:before {
@@ -690,6 +724,9 @@ i.icon.info:before {
 i.icon.announcement:before {
   content: "\f0a1";
 }
+i.icon.birthday:before {
+  content: "\f1fd";
+}
 
 /* Users */
 i.icon.users:before {
@@ -697,12 +734,6 @@ i.icon.users:before {
 }
 i.icon.doctor:before {
   content: "\f0f0";
-}
-i.icon.female:before {
-  content: "\f182";
-}
-i.icon.male:before {
-  content: "\f183";
 }
 i.icon.child:before {
   content: "\f1ae";
@@ -715,6 +746,53 @@ i.icon.handicap:before {
 }
 i.icon.student:before {
   content: "\f19d";
+}
+i.icon.spy:before {
+  content: "\f21b";
+}
+
+/* Gender & Sexuality */
+i.icon.female:before {
+  content: "\f182";
+}
+i.icon.male:before {
+  content: "\f183";
+}
+i.icon.woman:before {
+  content: "\f221";
+}
+i.icon.man:before {
+  content: "\f222";
+}
+i.icon.non.binary.transgender:before {
+  content: "\f223";
+}
+i.icon.intergender:before {
+  content: "\f224";
+}
+i.icon.transgender:before {
+  content: "\f225";
+}
+i.icon.lesbian:before {
+  content: "\f226";
+}
+i.icon.gay:before {
+  content: "\f227";
+}
+i.icon.heterosexual:before {
+  content: "\f228";
+}
+i.icon.other.gender:before {
+  content: "\f229";
+}
+i.icon.other.gender.vertical:before {
+  content: "\f22a";
+}
+i.icon.other.gender.horizontal:before {
+  content: "\f22b";
+}
+i.icon.neuter:before {
+  content: "\f22c";
 }
 
 /* View Adjustment */
@@ -843,6 +921,15 @@ i.icon.life.ring:before {
 i.icon.bomb:before {
   content: "\f1e2";
 }
+i.icon.soccer:before {
+  content: "\f1e3";
+}
+i.icon.calculator:before {
+  content: "\f1ec";
+}
+i.icon.diamond:before {
+  content: "\f219";
+}
 
 /* Shapes */
 i.icon.crosshairs:before {
@@ -940,6 +1027,12 @@ i.icon.check.square:before {
 i.icon.plus.square.outline:before {
   content: "\f196";
 }
+i.icon.toggle.off:before {
+  content: "\f204";
+}
+i.icon.toggle.on:before {
+  content: "\f205";
+}
 
 /* Media */
 i.icon.film:before {
@@ -956,6 +1049,18 @@ i.icon.bar.chart:before {
 }
 i.icon.camera.retro:before {
   content: "\f083";
+}
+i.icon.newspaper:before {
+  content: "\f1ea";
+}
+i.icon.area.chart:before {
+  content: "\f1fe";
+}
+i.icon.pie.chart:before {
+  content: "\f200";
+}
+i.icon.line.chart:before {
+  content: "\f201";
 }
 
 /* Pointers */
@@ -1097,6 +1202,9 @@ i.icon.power:before {
   content: "\f011";
 }
 i.icon.trash:before {
+  content: "\f1f8";
+}
+i.icon.trash.outline:before {
   content: "\f014";
 }
 i.icon.disk.outline:before {
@@ -1119,6 +1227,9 @@ i.icon.game:before {
 }
 i.icon.keyboard:before {
   content: "\f11c";
+}
+i.icon.plug:before {
+  content: "\f1e6";
 }
 
 /* File System */
@@ -1196,6 +1307,9 @@ i.icon.html5:before {
 i.icon.css3:before {
   content: "\f13c";
 }
+i.icon.rss:before {
+  content: "\f09e";
+}
 i.icon.rss.square:before {
   content: "\f143";
 }
@@ -1204,6 +1318,9 @@ i.icon.openid:before {
 }
 i.icon.database:before {
   content: "\f1c0";
+}
+i.icon.server:before {
+  content: "\f233";
 }
 
 /* Rating */
@@ -1305,8 +1422,11 @@ i.icon.mute:before {
 i.icon.video.play:before {
   content: "\f144";
 }
+i.icon.closed.captioning:before {
+  content: "\f20a";
+}
 
-/* Map & Locations */
+/* Map, Locations, & Transportation */
 i.icon.marker:before {
   content: "\f041";
 }
@@ -1360,6 +1480,30 @@ i.icon.taxi:before {
 }
 i.icon.tree:before {
   content: "\f1bb";
+}
+i.icon.bicycle:before {
+  content: "\f206";
+}
+i.icon.bus:before {
+  content: "\f207";
+}
+i.icon.ship:before {
+  content: "\f21a";
+}
+i.icon.motorcycle:before {
+  content: "\f21c";
+}
+i.icon.street.view:before {
+  content: "\f21d";
+}
+i.icon.hotel:before {
+  content: "\f236";
+}
+i.icon.train:before {
+  content: "\f238";
+}
+i.icon.subway:before {
+  content: "\f239";
 }
 
 /* Tables */
@@ -1507,6 +1651,35 @@ i.icon.won:before {
 }
 i.icon.lira:before {
   content: "\f195";
+}
+i.icon.shekel:before {
+  content: "\f20b";
+}
+
+/* Payment Options */
+i.icon.paypal:before {
+  content: "\f1ed";
+}
+i.icon.paypal.card:before {
+  content: "\f1f4";
+}
+i.icon.google.wallet:before {
+  content: "\f1ee";
+}
+i.icon.visa:before {
+  content: "\f1f0";
+}
+i.icon.mastercard:before {
+  content: "\f1f1";
+}
+i.icon.discover:before {
+  content: "\f1f2";
+}
+i.icon.american.express:before {
+  content: "\f1f3";
+}
+i.icon.stripe:before {
+  content: "\f1f5";
 }
 /* Networks and Websites*/
 i.icon.twitter.square:before {
@@ -1737,6 +1910,66 @@ i.icon.qq:before {
 i.icon.wechat:before {
   content: "\f1d7";
 }
+i.icon.slideshare:before {
+  content: "\f1e7";
+}
+i.icon.twitch:before {
+  content: "\f1e8";
+}
+i.icon.yelp:before {
+  content: "\f1e9";
+}
+i.icon.lastfm:before {
+  content: "\f202";
+}
+i.icon.lastfm.square:before {
+  content: "\f203";
+}
+i.icon.ioxhost:before {
+  content: "\f208";
+}
+i.icon.angellist:before {
+  content: "\f209";
+}
+i.icon.meanpath:before {
+  content: "\f20c";
+}
+i.icon.buysellads:before {
+  content: "\f20d";
+}
+i.icon.connectdevelop:before {
+  content: "\f20e";
+}
+i.icon.dashcube:before {
+  content: "\f210";
+}
+i.icon.forumbee:before {
+  content: "\f211";
+}
+i.icon.leanpub:before {
+  content: "\f212";
+}
+i.icon.sellsy:before {
+  content: "\f213";
+}
+i.icon.shirtsinbulk:before {
+  content: "\f214";
+}
+i.icon.simplybuilt:before {
+  content: "\f215";
+}
+i.icon.skyatlas:before {
+  content: "\f216";
+}
+i.icon.whatsapp:before {
+  content: "\f232";
+}
+i.icon.viacoin:before {
+  content: "\f237";
+}
+i.icon.medium:before {
+  content: "\f23a";
+}
 
 
 /*******************************
@@ -1770,6 +2003,21 @@ i.icon.delete:before {
 i.icon.x:before {
   content: "\f00d";
 }
+i.icon.user.times:before {
+  content: "\f235";
+}
+i.icon.user.close:before {
+  content: "\f235";
+}
+i.icon.user.cancel:before {
+  content: "\f235";
+}
+i.icon.user.delete:before {
+  content: "\f235";
+}
+i.icon.user.x:before {
+  content: "\f235";
+}
 i.icon.zoom.in:before {
   content: "\f00e";
 }
@@ -1778,9 +2026,6 @@ i.icon.magnify:before {
 }
 i.icon.shutdown:before {
   content: "\f011";
-}
-i.icon.signal:before {
-  content: "\f012";
 }
 i.icon.clock:before {
   content: "\f017";
@@ -1848,9 +2093,6 @@ i.icon.attention:before {
 i.icon.cart:before {
   content: "\f07a";
 }
-i.icon.plane:before {
-  content: "\f072";
-}
 i.icon.shuffle:before {
   content: "\f074";
 }
@@ -1865,6 +2107,15 @@ i.icon.shopping.cart:before {
 }
 i.icon.bar.graph:before {
   content: "\f080";
+}
+i.icon.area.graph:before {
+  content: "\f1fe";
+}
+i.icon.pie.graph:before {
+  content: "\f200";
+}
+i.icon.line.graph:before {
+  content: "\f201";
 }
 i.icon.key:before {
   content: "\f084";
@@ -1908,9 +2159,6 @@ i.icon.phone.square:before {
 i.icon.credit.card:before {
   content: "\f09d";
 }
-i.icon.rss:before {
-  content: "\f09e";
-}
 i.icon.hdd.outline:before {
   content: "\f0a0";
 }
@@ -1919,6 +2167,15 @@ i.icon.bullhorn:before {
 }
 i.icon.bell:before {
   content: "\f0f3";
+}
+i.icon.bell.outline:before {
+  content: "\f0a2";
+}
+i.icon.bell.slash:before {
+  content: "\f1f6";
+}
+i.icon.bell.slash.outline:before {
+  content: "\f1f7";
 }
 i.icon.hand.outline.right:before {
   content: "\f0a4";
@@ -2028,6 +2285,12 @@ i.icon.computer:before {
 i.icon.circle.outline:before {
   content: "\f10c";
 }
+i.icon.intersex:before {
+  content: "\f10c";
+}
+i.icon.asexual:before {
+  content: "\f10c";
+}
 i.icon.spinner:before {
   content: "\f110";
 }
@@ -2036,9 +2299,6 @@ i.icon.gamepad:before {
 }
 i.icon.star.half.full:before {
   content: "\f123";
-}
-i.icon.remove.link:before {
-  content: "\f127";
 }
 i.icon.question:before {
   content: "\f128";
@@ -2098,6 +2358,10 @@ i.icon.krw:before {
 i.icon.btc:before {
   content: "\f15a";
 }
+i.icon.sheqel:before,
+i.icon.ils:before {
+  content: "\f20b";
+}
 i.icon.try:before {
   content: "\f195";
 }
@@ -2110,6 +2374,9 @@ i.icon.dot.circle.outline:before {
 i.icon.sliders:before {
   content: "\f1de";
 }
+i.icon.wi-fi:before {
+  content: "\f1eb";
+}
 i.icon.graduation:before {
   content: "\f19d";
 }
@@ -2119,3 +2386,96 @@ i.icon.\33d:before {
 i.icon.weixin:before {
   content: "\f1d7";
 }
+i.icon.binoculars:before {
+  content: "\f1e5";
+}
+i.icon.gratipay:before {
+  content: "\f184";
+}
+i.icon.genderless:before {
+  content: "\f1db";
+}
+i.icon.teletype:before {
+  content: "\f1e4";
+}
+i.icon.power.cord:before {
+  content: "\f1e6";
+}
+i.icon.tty:before {
+  content: "\f1e4";
+}
+i.icon.cc:before {
+  content: "\f20a";
+}
+i.icon.ils:before {
+  content: "\f20b";
+}
+i.icon.plus.cart:before {
+  content: "\f217";
+}
+i.icon.arrow.down.cart:before {
+  content: "\f218";
+}
+i.icon.detective:before {
+  content: "\f21b";
+}
+i.icon.venus:before {
+  content: "\f221";
+}
+i.icon.mars:before {
+  content: "\f222";
+}
+i.icon.mercury:before {
+  content: "\f223";
+}
+i.icon.venus.double:before {
+  content: "\f226";
+}
+i.icon.female.homosexual:before {
+  content: "\f226";
+}
+i.icon.mars.double:before {
+  content: "\f227";
+}
+i.icon.male.homosexual:before {
+  content: "\f227";
+}
+i.icon.venus.mars:before {
+  content: "\f228";
+}
+i.icon.mars.stroke:before {
+  content: "\f229";
+}
+i.icon.mars.alternate:before {
+  content: "\f229";
+}
+i.icon.mars.vertical:before {
+  content: "\f22a";
+}
+i.icon.mars.horizontal:before {
+  content: "\f22b";
+}
+i.icon.mars.stroke.vertical:before {
+  content: "\f22a";
+}
+i.icon.mars.stroke.horizontal:before {
+  content: "\f22b";
+}
+i.icon.neuter:before {
+  content: "\f22c";
+}
+i.icon.facebook.official {
+  content: "\f230";
+}
+i.icon.pinterest.official {
+  content: "\f231";
+}
+i.icon.bed:before {
+  content: "\f236";
+}
+
+
+/*******************************
+         Site Overrides
+*******************************/
+
